fixed nagging error codes and white space

--- a/css/style.css
+++ b/css/style.css
@@ -13,16 +13,14 @@ body {
     font-family: 'Outfit', sans-serif;
     font-size: 15px;
     /* background-color: #1f3251;  dark blue */
-    background-color: #d6e2f0;  light gray
+    background-color: #d6e2f0; /*  light gray */
     /* background-color: #7b879d;   grayish blue */
-
 }
 
 img {
     max-width: 100%;
     height: auto;
     display: block;
-    
 }
 
 .wrapper {
